--- a/src/assets/styles/chatbot/ChatMessage.css
+++ b/src/assets/styles/chatbot/ChatMessage.css
@@ -1,14 +1,16 @@
+/* 메시지 컨테이너 스타일 */
 .messages {
-  display: flexbox;
+  display: flex;
+  flex-direction: column;
   flex: 1;
   overflow-y: auto;
-  padding: 0px 16px 0px 16px;
+  padding: 0px 16px;
   scrollbar-width: thin;
   scrollbar-color: #775A45 #ece8de;
   background-color: #fffaf0;
 }
 
-/*----스크롤--*/
+/* 스크롤바 스타일 */
 .messages::-webkit-scrollbar {
   width: 12px;
 }
@@ -23,39 +25,54 @@
   border-radius: 50px;
   border: 3px solid #f0f0f0;
 }
-    
+
+/* 메시지 공통 스타일 */
 .message {
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  border-radius: 5px;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 20px;
   color: black;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  max-width: 80%;
 }
 
-/* .message.user {
+/* 사용자 메시지 스타일 */
+.message.user {
   text-align: end;
   background-color: #F5DEB3;
   align-self: flex-end;
-} */
-  
-.message.user {
-  text-align: end;
-  position: relative; 
-  margin: 20px; 
-  padding: 20px; 
-  border-radius: 20px; 
-  background-color: #F5DEB3;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);  /* 그림자 효과 추가 */
+  position: relative;
 }
-.message.user:after { 
-  content: ""; 
-  position: absolute; 
-  top: 0px; 
-  right: -15px; 
-  border-left: 30px solid #F5DEB3; 
-  border-top: 5px solid transparent; 
+
+.message.user:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: -15px;
+  border-left: 30px solid #F5DEB3;
+  border-top: 5px solid transparent;
   border-bottom: 40px solid transparent;
 }
 
+/* 봇 메시지 스타일 */
+.message.bot {
+  text-align: start;
+  background-color: #FFA500;
+  align-self: flex-start;
+  position: relative;
+}
+
+.message.bot:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: -15px;
+  border-right: 30px solid #FFA500;
+  border-top: 5px solid transparent;
+  border-bottom: 40px solid transparent;
+}
+
+/* 메시지 컨테이너 레이아웃 */
 .message-container {
   display: flex;
   align-items: flex-start;
@@ -66,42 +83,59 @@
   flex-direction: row-reverse;
 }
 
-.message-icon {
-  width: 50px;
-  height: 50px; 
-  border-radius: 50%;
-  margin: 0 10px;
-}
-
-.user-icon, .bot-icon {
+/* 아이콘 스타일 */
+.message-icon, .user-icon, .bot-icon {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   margin: 0 10px;
 }
 
-
-/* .message.bot {
-  text-align: start;
-  background-color: #FFA500;
-} */
-
-.message.bot {
-  text-align: start;
-  position: relative; 
-  margin: 20px; 
-  padding: 20px; 
-  border-radius: 20px; 
-  background-color: #FFA500;
-  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);  /* 그림자 효과 추가 */
+/* 이미지 스타일 */
+.message-image-container {
+  max-width: 100%;
+  margin-bottom: 10px;
 }
 
-.message.bot:after {
-  content: ""; 
-  position: absolute; 
-  top: 0px; 
-  left: -15px; 
-  border-right: 30px solid #FFA500; 
-  border-top: 5px solid transparent; 
-  border-bottom: 40px solid transparent;
+.message-image {
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+/* 타이핑 인디케이터 (로딩 애니메이션) */
+.typing-indicator {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #FFA500;
+  border-radius: 20px;
+}
+
+.typing-indicator span {
+  height: 10px;
+  width: 10px;
+  float: left;
+  margin: 0 1px;
+  background-color: #775A45;
+  display: block;
+  border-radius: 50%;
+  opacity: 0.4;
+}
+
+.typing-indicator span:nth-of-type(1) {
+  animation: 1s blink infinite 0.3333s;
+}
+
+.typing-indicator span:nth-of-type(2) {
+  animation: 1s blink infinite 0.6666s;
+}
+
+.typing-indicator span:nth-of-type(3) {
+  animation: 1s blink infinite 0.9999s;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 1;
+  }
 }
