--- a/src/assets/styles/login/_signIn.scss
+++ b/src/assets/styles/login/_signIn.scss
@@ -19,30 +19,25 @@
         color: #333;
       }
   
-      .form-group {
-        margin-bottom: 1rem;
-  
-        label {
-          display: block;
-          margin-bottom: 0.5rem;
-          color: #555;
-        }
-  
-        input {
-          width: 100%;
-          padding: 0.5rem;
-          border: 1px solid #ddd;
-          border-radius: 4px;
-          font-size: 1rem;
-  
-          &:focus {
-            outline: none;
-            border-color: #4a90e2;
-          }
+      .login-password-input, .login-email-input {
+        width: 100%;
+        padding: 0.5rem;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        font-size: 1rem;
+
+        &:focus {
+          outline: none;
+          border-color: #4a90e2;
         }
       }
+
+      .login-form-forgot {
+        border-left: 1px solid #ddd;
+        padding-left: 13px;
+      }
   
-      button {
+      .login-form-button {
         width: 100%;
         padding: 0.75rem;
         background-color: #4a90e2;
@@ -57,5 +52,25 @@
           background-color: #357ae8;
         }
       }
+
+      .google-login-form-button {
+        width: 100%;
+        padding: 0.75rem;
+        background-color: #4a90e2;
+        color: black;
+        border: none;
+        border-radius: 4px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+  
+        &:hover {
+          background-color: #357ae8;
+        }
+      }
+
+
+
+
     }
   }
