--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -3,65 +3,89 @@
     background-color: #BA9F8B;
     border-radius: 100px;
     padding: 0px 100px 30px 100px;
-    width: 1280px;
+    width: 600px;
     margin: 150px auto;
     text-align: center;
+    .join-title {
+        color: white;
+        margin-bottom: 20px;
+        font-size: 64px;
+    }
+    .profile-picture {
+        width: 150px;
+        height: 150px;
+        background-color: #f2e8e1;
+        border-radius: 100%;
+        margin: 0 auto 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .picture-placeholder {
+            color: #8c7a6b;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: #f0f0f0;
+            cursor: pointer;
+            #file-upload {
+                display: none;
+            }
+            .user-profile-img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+
+
+
+            span {
+                color: #888;
+            }
+        }
+        
+        
+    }
+
+
+    .join-form-box {
+        .input-row {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
+
+            .input-group {
+                width: 100%;
+                justify-content: center;
+
+                input {
+                    width: 80%;
+                    padding: 10px;
+                    border: none;
+                    border-radius: 50px;
+                    background-color: #f2e8e1;
+                    font-size: 20px;
+                }
+            }
+        }
+        .create-account-btn {
+            width: 70%;
+            height: 60px;
+            padding: 10px;
+            border-radius: 50px;
+            background-color: #8c7a6b;
+            color: white;
+            cursor: pointer;
+            margin-top: 20px;
+            font-size: 25px;
+            font-weight: 600;
+        }
+    }
 }
   
-.join-title {
-    color: white;
-    margin-bottom: 20px;
-    font-size: 64px;
-}
-
-.profile-picture {
-    width: 150px;
-    height: 150px;
-    background-color: #f2e8e1;
-    border-radius: 100%;
-    margin: 0 auto 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.picture-placeholder {
-    color: #8c7a6b;
-}
-
-.input-row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
-}
-
-.input-group {
-    width: 48%;
-    justify-content: center;
-}
-
-.join-form-box input {
-    width: 500px;
-    padding: 10px;
-    border: none;
-    border-radius: 50px;
-    background-color: #f2e8e1;
-    font-size: 20px;
-}
-
-.create-account-btn {
-    width: 460px;
-    height: 60px;
-    padding: 10px;
-    border-radius: 50px;
-    background-color: #8c7a6b;
-    color: white;
-    cursor: pointer;
-    margin-top: 20px;
-    font-size: 25px;
-    font-weight: 600;
-}
-
 /* 반응형 디자인을 위한 미디어 쿼리 */
 @media (max-width: 480px) {
 .join-nagnae-container {
