--- a/src/assets/styles/login/_findModal.scss
+++ b/src/assets/styles/login/_findModal.scss
@@ -1,8 +1,6 @@
 .find-btn {
-    font-size: 20px;
-    color: #775A45;
-    cursor: pointer;
-    font-weight: 600;
+    border-left: 1px solid #ddd;
+    padding-left: 13px;
 }
 
 .find-id-pw-container {
