--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -80,7 +80,7 @@ header nav {
   font-family: 'HSBombaram3.0_Regular', sans-serif;
 }
 
-.sign_up, .sign_in, .my_page, .sign_out {
+.sign_up, .sign_in, .modify_account, .sign_out {
   font-size: 16px;
   padding: 8px 20px;
   margin: 0 5px;
@@ -116,7 +116,22 @@ header nav {
   }
 }
 
-.sign_up, .my_page {
+.modify_account {
+  display: inline-block;
+  text-align: center;
+  align-content: center;
+  width: 160px;
+  height: 50px;
+  color: #775A45;
+  margin: 0px 10px 0px 10px;
+  border-radius: 50px;
+  border: 1px solid #775A45;
+  &:hover {
+    background-color: darken(#DEDEDE, 10%);
+  }
+}
+
+.sign_up {
   display: inline-block;
   text-align: center;
   align-content: center;
