--- a/src/assets/styles/login/_signIn.scss
+++ b/src/assets/styles/login/_signIn.scss
@@ -32,7 +32,7 @@
         }
       }
 
-      .login-form-forgot {
+      .find-btn {
         border-left: 1px solid #ddd;
         padding-left: 13px;
       }
