--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -196,79 +196,38 @@ header nav {
 
 /* footer */
 footer {
-  background-color: #DEDEDE;
+  background-color: #f8f8f8;
   display: flex;
-  /* margin: 20px auto 0px auto; */
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  min-width: 768px;
+  height: 120px;
   box-sizing: border-box;
-  height: 220px;
-  z-index: 5;
   position: relative;
-}
+  padding: 20px 0;
+  font-size: 14px;
+  color: #333;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
 
-@media screen and (min-width: 768px) {
-  footer {
-    min-width: 100%;
-    margin: 0px 0px 0px 0px;
+  .footer-container {
+    max-width: 1200px;
+    width: 100%;
     padding: 0 20px;
+  }
+
+  .footer-content {
+    text-align: center;
+    line-height: 1.5;
   }
 }
 
-.footer-wrap{
-  width: 100%;
-  
-}
+@media screen and (max-width: 768px) {
+  footer {
+    height: auto;
+    padding: 10px 0;
 
-.footer-detail-box{
-  font-family: 'HSBombaram3.0_Vertical_Thin', sans-serif;
-  display: flexbox;
-  justify-content: center;
-  padding: 0px 250px 0px 250px;
-
+    .footer-content {
+      font-size: 12px;
+    }
+  }
 }
-.first-detail{
-  width: 100%;
-  height: 70px;
-  border-bottom: 1px solid black;
-  align-content: center;
-  /* background-color: black; */
-}
-
-.first-detail span{
-  font-size: 15px;
-  margin-right: 20px;
-  font-weight: 600;
-}
-
-.second-detail{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 90px;
-  font-size: 24px;
-}
-.s-introduce{
-  height: 50px;
-  align-content: center;
-}
-
-.s-introduce span {
-  margin-right: 20px;
-  font-weight: 700;
-}
-
-.third-detail{
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 30px;
-  font-size: 15px;
-}
-.third-detail span{
-  height: 30px;
-  font-weight: 600;
-}
-
-/* footer/ */
