--- a/src/assets/styles/login/_modifyAccount.scss
+++ b/src/assets/styles/login/_modifyAccount.scss
@@ -59,7 +59,9 @@
 
             .input-group {
                 width: 100%;
-                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
                 input {
                     width: 80%;
@@ -68,6 +70,14 @@
                     border-radius: 50px;
                     background-color: #f2e8e1;
                     font-size: 20px;
+                }
+
+                .error-message {
+                    color: #ff0000;
+                    font-size: 14px;
+                    margin-top: 5px;
+                    width: 80%;
+                    text-align: left;
                 }
             }
         }
@@ -82,6 +92,11 @@
             margin-top: 20px;
             font-size: 25px;
             font-weight: 600;
+        }
+        .error-message {
+            color: #ff0000;
+            font-size: 14px;
+            margin-top: 10px;
         }
     }
 }
