--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -59,7 +59,9 @@
 
             .input-group {
                 width: 100%;
-                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
                 input {
                     width: 80%;
@@ -68,6 +70,52 @@
                     border-radius: 50px;
                     background-color: #f2e8e1;
                     font-size: 20px;
+                }
+                div {
+                    width: 80%;
+                    margin-top: 15px;
+                    display: flex;
+                    justify-content: space-between;
+
+                    input {
+                        width: 60%;
+                        margin-right: 10px;
+                    }
+                    select {
+                        appearance: none;
+                        -webkit-appearance: none;
+                        -moz-appearance: none;
+                        background-color: white;
+                        border: 1px solid #ccc;
+                        border-radius: 50px;
+                        padding: 8px 12px;
+                        font-size: 20px;
+                        color: #333;
+                        cursor: pointer;
+                        outline: none;
+                        width: 35%; /* 원하는 너비로 조정 */
+                      }
+                      
+                      /* 화살표 아이콘 스타일링 (선택사항) */
+                      select::-ms-expand {
+                        display: none;
+                      }
+                      
+                      select::after {
+                        content: '\25BC';
+                        position: absolute;
+                        top: 50%;
+                        right: 10px;
+                        transform: translateY(-50%);
+                        pointer-events: none;
+                      }
+                }
+                .error-message {
+                    color: #ff0000;
+                    font-size: 14px;
+                    margin-top: 5px;
+                    width: 80%;
+                    text-align: left;
                 }
             }
         }
