게시판 댓글,조회수 마무리

--- a/src/assets/styles/board/Community/Comm_PostRead.scss
+++ b/src/assets/styles/board/Community/Comm_PostRead.scss
@@ -34,6 +34,7 @@
         }
 
         &.comm-modify {
+          padding: 8px 11px;
           background-color: #A48975;
           color: white;
           &:hover {
