--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -63,6 +63,16 @@
                 flex-direction: column;
                 align-items: center;
 
+                .id-check-box {
+                    justify-content: end;
+                    .id-check-btn {
+                        padding: 10px;
+                        border-radius: 50px;
+                        background-color: #8c7a6b;
+                        color: white;
+                        cursor: pointer;
+                    }
+                }
                 input {
                     width: 80%;
                     padding: 10px;
