--- a/src/assets/styles/homepage/homepage.css
+++ b/src/assets/styles/homepage/homepage.css
@@ -114,7 +114,7 @@ body {
 
 .main-explanation-1-1, .main-explanation-2-1 {
     width: 35%;
-    padding: 0.625rem 1.375rem 0 1.375rem;
+    padding: 1.375rem 0 1.375rem;
 }
 
 .main-explanation-1-2, .main-explanation-2-2 {
