css수정,로그인 전에도 userData 없이도 오류 안뜨게 가능해서 세션 usarData 다시 remove

--- a/src/assets/styles/board/Announcements/Ann_PostRead.scss
+++ b/src/assets/styles/board/Announcements/Ann_PostRead.scss
@@ -1,4 +1,5 @@
 .ann-announcements {
+  min-width: 717px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
     
@@ -34,6 +35,7 @@
           }
 
           &.ann-modify {
+            padding: 8px 11px;
             background-color: #A48975;
             color: white;
             &:hover {
