--- a/src/assets/styles/board/BoardMain.scss
+++ b/src/assets/styles/board/BoardMain.scss
@@ -1,5 +1,5 @@
 .board-main {
-    min-width: 560px;
+    min-width: 717px;
     font-family: 'HSBombaram3.0_Thin', sans-serif;
     margin: 0 auto;
     padding: 20px;
@@ -77,7 +77,8 @@
                 }
               }
               .board-main-tbody-writer,.board-main-tbody-insertDate,
-              .board-main-tbody-views,.board-main-tbody-nopost{
+              .board-main-tbody-views,.board-main-tbody-nopost,
+              .board-main-tbody-no{
                 text-align: center;
               }
             }
