입구대공사

--- a/src/assets/styles/login/_signPage.scss
+++ b/src/assets/styles/login/_signPage.scss
@@ -4,6 +4,7 @@
     height: 100%;
     flex: 1;
     padding: 0px 20px 0px 20px;
+    margin-top: 0px;
     
     .login-contents {
         align-content: center;
