--- a/src/assets/styles/login/_signIn.scss
+++ b/src/assets/styles/login/_signIn.scss
@@ -1,76 +1,139 @@
-.login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f2f5;
-  
-    .login-form {
-      background-color: #ffffff;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-  
-      h2 {
-        text-align: center;
-        margin-bottom: 1.5rem;
-        color: #333;
-      }
-  
-      .login-password-input, .login-email-input {
-        width: 100%;
-        padding: 0.5rem;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 1rem;
+.login-wrap {
+  margin-top: 50px;
+  .login-contents {
+    width: 100%;
+    .login-page {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      
 
-        &:focus {
-          outline: none;
-          border-color: #4a90e2;
+
+      .login-container {
+        width: 1000px;
+        background-image: url('../../images/나그네입구.jpg');
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: 98px;
+        min-height: 800px;
+        // width: 100%; /* 300% 제거 */
+        // transform: translateX(-33.33%); /* translateX(-33.33%) 제거 */
+
+        // 애니메이션 추가
+        animation: fadeInUp 0.8s ease-in-out;
+        
+        .login-form {
+          background-color: rgba(255, 255, 255, 0.4);
+          padding: 2rem;
+          border-radius: 8px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          width: 100%;
+          height: 510px;
+          margin: 154px auto 0;
+          transform: none;
+          max-width: 345px;
+
+          // 애니메이션 추가
+          animation: fadeInUp 0.8s ease-in-out; 
+          
+          .login-title {
+            font-family: 'HSBombaram3.0_Regular', sans-serif;
+            font-size: 25px;
+            text-align: center;
+            margin-bottom: 1.5rem;
+            color: #775A45;
+          }
+          
+
+          .login-password-input, .login-email-input {
+            width: 100%;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+            height: 45px;
+
+            &:focus {
+              outline: none;
+              border-color: #775A45;
+            }
+          }
+          .ant-checkbox-wrapper {
+            font-size: 15px; /* Remember me 체크박스의 폰트 크기 */
+            font-weight: 500;
+            
+          }
+          .ant-checkbox-checked .ant-checkbox-inner {
+            background-color: #775A45 !important;
+            border-color: #775A45 !important;
+          }
+          .ant-checkbox-wrapper:hover .ant-checkbox-checked .ant-checkbox-inner {
+            background-color: #775A45 !important;
+            border-color: #775A45 !important;
+          }
+          .ant-checkbox-checked:hover .ant-checkbox-checked .ant-checkbox-inner {
+            background-color: #775A45 !important;
+            border-color: #775A45 !important;
+          }
+          .ant-checkbox-checked:after {
+            border-color: #775A45 !important;
+          }
+          .ant-checkbox:hover::after {
+            border-color: #775A45 !important;
+          }
+          .ant-checkbox:hover .ant-checkbox-inner {
+            border-color: #775A45 !important;
+          }
+          
+          // ****** I add this one ******
+          .ant-checkbox-wrapper:hover .ant-checkbox-inner {
+            border-color: #775A45 !important;
+          }
+
+          .find-btn {
+            font-size: 15px;
+            font-weight: 500;
+            border-left: 1px solid #ddd;
+            padding-left: 13px;
+
+            &:hover {
+              color: #a57a5f;
+            }
+            
+          }
+
+          .login-form-button {
+            width: 100%;
+            height: 40px;
+            padding: 0.75rem;
+            background-color: #775A45;
+            color: #ffffff;
+            border: none;
+            border-radius: 4px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+              background-color: #573e2e;
+            }
+          }
+
         }
       }
-
-      .find-btn {
-        border-left: 1px solid #ddd;
-        padding-left: 13px;
-      }
-  
-      .login-form-button {
-        width: 100%;
-        padding: 0.75rem;
-        background-color: #4a90e2;
-        color: #ffffff;
-        border: none;
-        border-radius: 4px;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-  
-        &:hover {
-          background-color: #357ae8;
-        }
-      }
-
-      .google-login-form-button {
-        width: 100%;
-        padding: 0.75rem;
-        background-color: #4a90e2;
-        color: black;
-        border: none;
-        border-radius: 4px;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-  
-        &:hover {
-          background-color: #357ae8;
-        }
-      }
-
-
-
-
     }
   }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
