--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -1,22 +1,38 @@
 .join-nagnae-container {
     font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
-    background-color: #BA9F8B;
-    border-radius: 100px;
-    padding: 0px 100px 30px 100px;
-    width: 600px;
-    margin: 150px auto;
-    text-align: center;
+    background-image: url('../../images/나그네입구3.jpg');
+    background-position: top center;
+    background-size: 1280px 100%; // 가로 1024px, 세로는 컨테이너의 100%로 설정
+    background-repeat: no-repeat;
+    width: 1280px;
+    min-height: 1500px; // 원하는 최소 높이로 설정 (필요에 따라 조정 가능)
+    margin: -10px auto;
+    padding: 0px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    .form-content {
+      padding: 40px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 800px;
+      margin-top: 180px;
+    }
+  
     .join-title {
-        color: white;
-        margin-bottom: 20px;
-        font-size: 64px;
+        text-align: center;
+        color: #F5E6D3;
+        font-size: 48px;
+        margin-bottom: 30px;
     }
     .profile-picture {
         width: 150px;
         height: 150px;
         background-color: #f2e8e1;
+        border: 5px solid #8c7a6b;
         border-radius: 100%;
-        margin: 0 auto 20px;
+        margin: 100px auto 20px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -52,6 +68,7 @@
 
 
     .join-form-box {
+        padding: 0px 100px;
         .input-row {
             display: flex;
             justify-content: center;
@@ -129,17 +146,22 @@
                 }
             }
         }
-        .create-account-btn {
-            width: 70%;
-            height: 60px;
-            padding: 10px;
-            border-radius: 50px;
-            background-color: #8c7a6b;
-            color: white;
-            cursor: pointer;
-            margin-top: 20px;
-            font-size: 25px;
-            font-weight: 600;
+        .create-account-btn-box{
+            display: flex;
+            justify-content: center;
+            margin-top: 140px;
+            .create-account-btn {
+                width: 70%;
+                height: 60px;
+                padding: 5px;
+                border: 5px solid #8c7a6b;
+                border-radius: 50px;
+                background-color: white;
+                color: #8c7a6b;
+                cursor: pointer;
+                font-size: 25px;
+                font-weight: 600;
+            }
         }
     }
 }
