--- a/src/assets/styles/login/_signIn.scss
+++ b/src/assets/styles/login/_signIn.scss
@@ -14,7 +14,7 @@
         width: 1000px;
         background-image: url('../../images/나그네입구.jpg');
         background-position: top;
-        background-size: contain;
+        background-size: 1000px 100%;
         background-repeat: no-repeat;
         margin-top: 98px;
         min-height: 800px;
