--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -1,10 +1,10 @@
 .join-nagnae-container {
     font-family: 'HSBombaram3.0_세로쓰기전용_Vertical_Regular', sans-serif;
-    background-image: url('../../images/나그네입구3.jpg');
+    background-image: url('../../images/나그네가입심플.jpg');
     background-position: top center;
-    background-size: 1280px 100%; // 가로 1024px, 세로는 컨테이너의 100%로 설정
+    background-size: 1000px 100%; // 가로 1024px, 세로는 컨테이너의 100%로 설정
     background-repeat: no-repeat;
-    width: 1280px;
+    width: 1000px;
     min-height: 1500px; // 원하는 최소 높이로 설정 (필요에 따라 조정 가능)
     margin: -10px auto;
     padding: 0px 0;
