--- a/src/assets/styles/login/_signUp.scss
+++ b/src/assets/styles/login/_signUp.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeInUp 0.8s ease-in-out;
   
     .form-content {
       padding: 40px;
@@ -18,13 +19,15 @@
       width: 80%;
       max-width: 800px;
       margin-top: 180px;
+      animation: fadeInUp 0.8s ease-in-out;
     }
   
     .join-title {
         text-align: center;
-        color: #F5E6D3;
+        color: #775A45;
         font-size: 48px;
-        margin-bottom: 30px;
+        margin-bottom: -35px;
+        margin-top: 65px;
     }
     .profile-picture {
         width: 150px;
@@ -182,3 +185,14 @@
         margin-bottom: 10px;
     }
 }
+
+@keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
